--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,10 +8,19 @@
   flex-direction: row;
   gap: 8px;
 }
+.flexLayout {
+  display: flex;
+  align-items: center;
+  gap: 1em;
+}
 @media (max-width: 800px) {
   .header {
     flex-direction: column;
     gap: 16px;
+  }
+  .flexLayout {
+    flex-direction: column;
+    gap: 0;
   }
 }
 .section {
@@ -45,11 +54,11 @@
 }
 
 .h3,
-.intro > * {
+.intro * {
   margin: 0;
   transition: 300ms linear;
 }
-.intro > h1 {
+.intro h1 {
   font-size: 4rem;
 }
 .hidden {
@@ -58,3 +67,4 @@
 .halfopacity {
   opacity: 0.5;
 }
+
